--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -1,25 +1,53 @@
-<h2>Change your password</h2>
+<div class="h-100">
+  <div class="login-bg h-100">
+    <div class="container h-100">
+      <div class="row justify-content-center h-100">
+        <div class="col-xl-11  login-form-center">
+          <div class="form-input-content">
+            <div class="row bg-white">
+              <div class="col-xl-6 px-0 d-flex align-items-center  justify-content-center bg-blue  ">
+                <div class="login-inner-main text-center">
+                  <p class="fw-400 text-white">Welcome to</p>
+                  <h2 class="fw-700 text-white">ALO</h2>
+                  <p class="fw-400 text-white">Log in to access your account</p>
+                </div>
+              </div>
+              <div class="col-xl-6  d-flex align-items-center  justify-content-center custom-blue-shadow ">
+                <div class="card-body">
+                  <div class="logo-login text-center mb-4">
+                    <a href="#">
+                      <%= image_tag 'Alo-Logo-final.png', alt: 'logo', class: 'logo' %>
+                    </a>
+                  </div>
+                  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+                    <%= render "devise/shared/error_messages", resource: resource %>
+                    <%= f.hidden_field :reset_password_token %>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  <%= f.hidden_field :reset_password_token %>
-
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
+                    <div class="form-group">
+                      <%= f.label :email, "Email" %>
+                      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control', placeholder: 'Email', value: '' %>
+                    </div>
+                    <div class="form-group">
+                      <%= f.label :password, "Password" %>
+                      <% if @minimum_password_length %>
+                        <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+                      <% end %>
+                      <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: 'form-control', placeholder: 'Password', value: '' %>
+                    </div>
+                    <div class="form-group">
+                      <%= f.label :password_confirmation, "Re-enter Password" %><br />
+                      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control', placeholder: 'Password', value: '' %>
+                    </div>
+                    <div class="text-right mt-4">
+                      <%= f.submit "Submit", class: 'btn btn-primary fw-700 fs-18 text-uppercase border-radius-100 line-height-normal px-3 py-2' %>
+                    </div>
+                  <% end %>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "users/shared/links" %>
+</div>
