DRY code for the layout of signup

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,9 @@
   </head>
 
   <body>
+    <% if !user_signed_in? && params[:action] != "landing_page" %>
+      <%= render 'layouts/sign_up_layout' %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
